# Briefing

./: .gitignore  Makefile  README.md  db.sqlite3  pyproject.toml  requirements.txt
config/: settings.py  urls.py
darkTh/: apps.py
darkTh/static_src/: package-lock.json  package.json
darkTh/templates/: about.html  base.html  contact.html  error.html  main.html
deepPavlov/: test.json
initru/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
initru/migrations/: 0001_initial.py  0002_rename_question_id_answers_question_and_more.py  0003_alter_customuser_avatar_and_more.py  0003_test_times.py  0004_alter_customuser_phone_number.py  0004_rename_times_test_time.py  0005_rename_question_question_name_remove_answers_result_and_more.py  0006_res_quiz_alter_res_date_instruction.py  0007_rename_cause_res_mark.py  0008_alter_customuser_phone_number.py  0009_alter_customuser_phone_number.py  0010_alter_res_mark_alter_res_result.py  0011_alter_answers_text.py  0012_downloadinstructionsfortests.py  0013_alter_test_file.py  0014_alter_test_file.py  0015_res_date_instruction_end_alter_customuser_avatar_and_more.py  0016_alter_res_date_instruction_end.py  0017_alter_res_date_instruction_end.py  0018_alter_role_name_role.py  0019_test_group.py  0020_remove_test_group.py  0021_test_stud_groups.py  0022_test_date_target.py  0023_alter_res_date_instruction_end.py  0024_alter_test_date_target.py  0025_alter_res_date_instruction_end.py  0026_res_attempt_alter_groups_name_group_and_more.py  0027_alter_test_stud_groups_briefsforpeoples.py  0029_alter_test_stud_groups.py  (+1 more)
(+53 files in other folders)
