[project]
name = "briefing"
version = "0.1.0"
description = "Django service for briefings, tests, users, and training results."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "django>=5.2,<6.0",
    "pillow>=11.0",
    "django-smart-selects>=1.7.2",
    "fontawesomefree>=6.0",
    "phonenumbers>=8.0",
    "python-docx>=1.1",
    "django-phonenumber-field[phonenumberslite]>=8.0",
    "timedelta>=2020.12.3",
    "mysqlclient>=2.2",
]

[tool.uv]
package = false


[dependency-groups]
dev = [
    "ruff>=0.14.0",
]


[tool.ruff]
line-length = 100
target-version = "py311"
preview = true
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pycache__",
    "migrations",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "RET"]
extend-select = [
    "RUF100",
    "PLR1702",
    "C4",
]
ignore = [
    "E266",
    "RET504",
    "RET505",
    "RET507",
    "RET508",
    "UP035",
    "UP034",
    "UP037",
    "UP041",
    "B008",
    "E501",
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["initru", "config"]
combine-as-imports = true
lines-after-imports = 2

[tool.ruff.lint.pylint]
max-nested-blocks = 4
